2010-02-12 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: add support to snmp ver3 in the
	load network component.

2010-02-12 Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb.sql: add new fields to tnetwork_component for support the
	snmp ver 3.
	
	* godmode/modules/manage_network_components_form.php,
	godmode/modules/manage_network_components_form_network.php
	godmode/modules/manage_network_components.php: add support to snmp ver 3,
	add the fields for this use, and now can create and edit network
	component with snmp ver 3.

2010-02-12 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components_form.php: clean source code and
	set correct ident.

	*godmode/modules/manage_network_components_form_network.php: remove the end
	of source code that it's unused.

2010-02-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: clean source code, delete javascript debug
	info messages for firebug.

	* godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/configurar_agente.php: add support for SMNP ver3 in the
	forms to add or edit "Network module".

2010-02-10  Sancho Lerena <slerena@artica.es>

 	* godmode/db/db_main.php: Added new metrics about DB usage. Added
	last time pandora_db.pl was running in the system.

	* godmode/db/db_info.php: Added graphic from db_main

	* operation/reporting/reporting_viewer_pdf.php
	include/functions_reporting_pdf.php: Small fixes for PDF reporting. 
	Decode entities to show texts correctly in description of each element.

	* pandoradb.sql: new enterprise structures.

2010-02-10 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "saveMap" now save the default
	connection.
	
	* operation/gis_maps/ajax.php: add option "get_data_conexion" for get by
	ajax the data connection when pass id_connection.
	
	* godmode/gis_maps/configure_gis_map.php: now you can set the default